fix faq on mobile, prettify

--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,14 @@ input {
     width: 25%;
     padding: 0.5rem;
     border: none;
+    font-family: 'Poppins';
 }
 
-button {
+button[type="submit"] {
+    background-color: #8b5aff;
+    color: white;
+    font-family: 'Poppins';
+    font-weight: 500;
     padding: 0.5rem;
     border: none;
     cursor: pointer;
@@ -67,6 +72,16 @@ main>div:not(:first-child) {
     transition: 0.4s;
 }
 
+@media (max-width: 768px) {
+    .accordion {
+        flex-direction: column;
+    }
+
+    .accordion-item {
+        width: 100%;
+    }
+}
+
 .accordion-button {
     cursor: pointer;
     padding: 1rem;
@@ -76,18 +91,22 @@ main>div:not(:first-child) {
     outline: none;
     font-size: 15px;
     transition: 0.4s;
-    color: black;
+    background-color: #8b5aff;
+    color: white;
 }
 
 .accordion-button:hover {
-    background-color: #bbb;
+    background-color: #4913c8;
 }
 
 .accordion-content {
     padding: 0 1.5rem;
-    visibility: hidden;
+    transition: 0.4s;
+    max-height: 0;
+    overflow: hidden;
+    width: 100%;
 }
 
 .accordion-content.active {
-    visibility: visible;
+    max-height: 500px;
 }
